conformance_test/core_language_tests/positive_tests/09_test_configurations/0901_communication_ports/NegSyn_0901_Communication_ports_001.ttcn
/******************************************************************************
 * Copyright (c) ETSI 2017.
 *
 * This file is subject to copyrights owned by ETSI. Non-exclusive permission
 * is hereby granted, free of charge, to copy, reproduce and amend this file
 * under the following conditions: It is provided "as is", without warranty of any
 * kind, expressed or implied.
 * 
 * ETSI shall never be liable for any claim, damages, or other liability arising
 * from its use or inability of use.This permission does not apply to any documentation
 * associated with this file for which ETSI keeps all rights reserved. The present
 * copyright notice shall be included in all copies of whole or part of this
 * file and shall not imply any sub-license right.
 *
 * Modified by: Adrien Kirjak
 *
 ** @version  0.0.1
 ** @purpose  1:9.1, Verify that a two TSI port cannot be connected
 ** @verdict  pass reject, noexecution
 ***************************************************/

/*NOTE: see Figure 7(f): Two TSI port cannot be connected
 * */

module NegSyn_0901_Communication_ports_001 {
  
    type port P message {
        inout integer
    }

    type component GeneralComp
    {
        port P p1, p2;
    }
	
        type component General_System_Comp
    {
        port P p_system_1, p_system_2;
    }
    
    testcase TC_NegSyn_0901_Communication_ports_001() runs on GeneralComp system General_System_Comp {
		
        connect(system:p_system_1, system:p_system_2); // error: p_system_1 and p_system_2 cannot be connected
		
        setverdict(pass);
    }
	
    control{
        execute(TC_NegSyn_0901_Communication_ports_001());
    }
}

